# Hackathon-2025-Robotics-ai-Book1

./: .gitignore  404.html  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  better_auth.py  deploy_to_vercel.py  main.py  package-lock.json  requirements.txt  sitemap.xml  validate_deployment.py  vercel.json  vercel_build_config.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/scripts/: auto-push.sh
.specify/templates/: adr-template.md
.vercel/: project.json
ChatWidget/: PHASE_5_SUMMARY.md  package-lock.json
ChatWidget/src/: ChatWidget.tsx  index.ts
assets/css/: styles.47359b36.css
assets/js/: 17896441.a25c98a6.js  1c44967b.df2fee73.js  2659bc16.1954e7bd.js  2bb634c3.e1985c2e.js  37a889cd.9ab860b0.js  37a889cd.ba9c624c.js  393be207.6402a17e.js  3982b094.06c1b2bf.js  3982b094.d3cc0d7a.js  51279860.1005a5a1.js  5ad232c4.905241c9.js  5ad232c4.db32f250.js  (+13 more)
better-auth/: main.py  pyproject.toml
better-auth/models/: session.py
better-auth/services/: auth_service.py
chatbot-agent/: better_auth.py  db_test.py  main.py  pyproject.toml  requirements.txt  validate_implementation.py
chatbot-agent/models/: password_reset.py
chatbot-agent/services/: auth_service.py
docs/: index.html
frontend/: docusaurus.config.dev.ts  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
markdown-page/: index.html
rag-chatbot-backend/: agent.py  embading.py  main.py  pyproject.toml  requirements.txt
robotics-textbook/: .gitignore  CLAUDE.md  Dockerfile.chatbot  package-lock.json  railway.json
(+416 files in other folders)
